# Data-Structures-and-Algorithms

./: README.md  algorithms.lnk
projects/: CMakeLists.txt
projects/algorithms/: CMakeLists.txt
projects/algorithms/include/: header.hpp  lists.hpp  recursion.hpp  trees.hpp
projects/algorithms/src/: header.cpp  lists.cpp  main.cpp  recursion.cpp  trees.cpp
projects/data_structures/: CMakeLists.txt
projects/data_structures/include/: data_structures.hpp  lists.hpp
projects/data_structures/src/: lists.cpp  main.cpp
projects/design_patterns/: CMakeLists.txt
projects/design_patterns/include/: abstract_factory.hpp  adapter_class.hpp  adapter_object.hpp  bridge.hpp  builder.hpp  chain_of_responsability.hpp  command.hpp  composite.hpp  decorator.hpp  facade.hpp  factory_method.hpp  flyweight.hpp  interpreter.hpp  iterator.hpp  mediator.hpp  memento.hpp  null_object.hpp  object_pool.hpp  observer.hpp  prototype.hpp  proxy.hpp  singleton.hpp  strategy.hpp  template_method.hpp  visitor.hpp
projects/design_patterns/src/: abstract_factory.cpp  adapter_class.cpp  adapter_object.cpp  builder.cpp  chain_of_responsability.cpp  decorator.cpp  facade.cpp  factory_method.cpp  flyweight.cpp  main.cpp  mediator.cpp  memento.cpp  null_object.cpp  object_pool.cpp  prototype.cpp  singleton.cpp  template_method.cpp
scripts/: build_project_Win.bat
